--- a/taka_report/2019:6:7.md
+++ b/taka_report/2019:6:7.md
@@ -81,3 +81,22 @@
 
 1. 通知させたいチャンネルで/github subscribe GitHubのオーナ名/リポジトリ名
 2. /github subscribe GitHubのオーナ名/リポジトリ名 通知を追加したい機能
+
+## djangoつなぎ込み、設定
+
+1. sqlalchemy.pyに設定を記述
+2. urlsに読み込みを記述
+3. settings.pyにDATABASESなどを記述
+
+## customer/pagesの中に必要フォルダの作成
+
+1. ユーザーの画面遷移するためのフォルダ構成、ファイル構成を整えた
+2. 今はindex.vueのみだが、ユーザーを識別するために、_uuid.vueも使っていったほうが良い
+
+## customer/pages/home
+
+1. ホームに必要な機能を簡単に記述した
+2. 画面遷移の記述をした
+3. 遷移先の機能の記述はこれからやる
+4. cssや具体的なデザインは裏とのつなげ込みと同時進行で行う。
+5. 今は必要な機能をデザイン性無く並べてそれを裏と繋げることが優先。詰まったらデザインなどをやる。
