--- a/taka_report/2019:6:7.md
+++ b/taka_report/2019:6:7.md
@@ -100,3 +100,10 @@
 3. 遷移先の機能の記述はこれからやる
 4. cssや具体的なデザインは裏とのつなげ込みと同時進行で行う。
 5. 今は必要な機能をデザイン性無く並べてそれを裏と繋げることが優先。詰まったらデザインなどをやる。
+
+## customer,client,admin
+1. 各フォルダにnpm install vue-router --saveを記述して、画面遷移を正確に読み込ませる
+
+## サイト構築再考
+
+1. ホームや各ページの考え、header,footerの構築
